# QDAG

./: .gitignore  LICENSE  README.md
QDAG/: Alice.cpp  Alice.hpp  Bob.cpp  Bob.hpp  CMakeCache.txt  CMakeLists.txt  DDexport.h  Debug alias  Factorizer.cpp  Factorizer.hpp  Makefile  OldProbabilisticPeriodFinder.cpp  OldProbabilisticPeriodFinder.hpp  PeriodFinder.cpp  PeriodFinder.hpp  ProbabilisticPeriodFinder.cpp  ProbabilisticPeriodFinder.hpp  QDAG  QFT-DDgenerator.cpp  QFT-DDgenerator.hpp  QFT-Measurement.cpp  QFT-Measurement.hpp  QFT.cpp  QFT.hpp  RegisterFactory.cpp  RegisterFactory.hpp  RegisterFactoryInterface.cpp  SB-ProbabilisticPeriodFinder.cpp  SB-ProbabilisticPeriodFinder.hpp  bruteforceperiodfinder.cc  cmake_install.cmake  commonheaders.h  debug0.dot  debug1.dot  debug2.dot  debug3.dot  main.cpp  shorutil.cpp  shorutil.hpp  util.cpp  (+1 more)
QDAG/IIC-JKU/: DDcomplex.cpp  DDcomplex.h  DDexport.cpp  DDexport.h  DDpackage.cpp  DDpackage.h  IIC-JKUmain.cpp
QDAG/NumericalExperiments/: fftmatrix.m
QDAG/NumericalExperiments/beg perm-swap by swap/: GNV1countersfullrandom100samples64qubits.txt  GNV1timersfullrandom100samples64qubits.txt  GNV1timersrandommt19937(413)100samples64qubits.txt  GNV1timersuniformstate100samples64qubits.txt  GNV1timers|2^n-1>100samples64qubits.txt  QFTV1timersrandommt19937(413)100samples64qubits.txt  QFTV2countersfullrandom100samples16qubits.txt  QFTV2timersfullrandom100samples16qubits.txt  QFTV2timersuniformstate100samples64qubits.txt  (+4 more)
QDAG/graphs/:  d_input2bituniformstate.dot   d_permgate4.dot  d_output2bituniformstate.dot
(+57 files in other folders)
